Add Node.js distribution and improve Windows compatibility
- Add Node.js distribution version (plexpreroller-windows-nodejs.zip)
- Create launcher-nodejs.bat for Node.js version
- Add build-simple.bat for alternative build process
- Convert back to .js files with CommonJS for better pkg compatibility
- Add package.json for Node.js distribution
- Improve error handling and user experience
- Create multiple distribution options for different use cases

--- a/windows/package.json
+++ b/windows/package.json
@@ -2,9 +2,10 @@
   "name": "plexpreroller-windows",
   "version": "1.0.0",
   "description": "PlexPreroller Windows Application",
-  "main": "src/main.cjs",
+  "main": "src/main.js",
+  "type": "commonjs",
   "scripts": {
-    "start": "node src/main.cjs",
+    "start": "node src/main.js",
     "build": "pkg . --targets node18-linux-x64 --output plexpreroller",
     "build-windows": "pkg . --targets node18-win-x64 --output plexpreroller.exe",
     "dev": "nodemon src/main.js",
@@ -30,12 +31,13 @@
       "frontend/**/*"
     ],
     "scripts": [
-      "src/**/*.js"
+      "src/main.js",
+      "src/storage.js",
+      "src/plex.js"
     ],
     "targets": [
       "node18-win-x64"
-    ],
-    "outputPath": "dist"
+    ]
   },
-  "bin": "src/main.cjs"
+  "bin": "src/main.js"
 }
